Improve packaging of data's model

--- a/src/main/resources/locales/messages.properties
+++ b/src/main/resources/locales/messages.properties
@@ -75,3 +75,7 @@ property.contact.name=Nombre
 property.contact.telephone=Teléfono
 property.contact.email=Correo electrónico
 property.contact.message=Mensaje
+
+property.card.outstanding=Destacada
+property.card.category.sell=En venta
+property.card.category.rent=En alquilar
