Paginate search property page

--- a/src/main/resources/locales/messages.properties
+++ b/src/main/resources/locales/messages.properties
@@ -47,6 +47,7 @@ property.search.title=¡Encuentra tu Inmueble!
 property.search.phrase=En ROMSAL puedes buscar el inmueble de tus sueños es mucho mas fácil. Utiliza nuestro potente buscador para localizar la propiedad que mas se ajusta a tus necesidades.
 
 property.search=Buscar inmuebles
+property.search.order.default=Orden por defecto
 property.search.order.newer=Últimas propiedades
 property.search.order.older=Propiedades antiguas
 property.search.order.price.low=Precio más bajo
